# rustup-pypi-shims

./: pyproject.toml  readme.md
rustup/: __init__.py
