[project]
name            = "rustup-pypi-shims"
version         = "1.0.0"
description     = ""
readme          = "readme.md"
requires-python = ">=3.13"
dependencies    = [
    "rustup~=1.28.2",
]

[project.scripts]
rustup-init = "rustup:init"
cargo       = "rustup:cargo"
rustc       = "rustup:rustc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rustup"]
