[project]
name            = "rustup-pypi-shims"
version         = "1.0.0"
description     = ""
readme          = "readme.md"
requires-python = ">=3.13"
dependencies    = [
    "rustup~=1.28.2",
]

[project.scripts]
rustup-init   = "rustup:init"
cargo         = "rustup:cargo"
cargo-clippy  = "rustup:cargo_clippy"
cargo-fmt     = "rustup:cargo_fmt"
cargo-miri    = "rustup:cargo_miri"
clippy-driver = "rustup:clippy_driver"
rls           = "rustup:rls"
rust-analyzer = "rustup:rust_analyzer"
rust-gdb      = "rustup:rust_gdb"
rust-gdbgui   = "rustup:rust_gdbgui"
rust-lldb     = "rustup:rust_lldb"
rustc         = "rustup:rustc"
rustdoc       = "rustup:rustdoc"
rustfmt       = "rustup:rustfmt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rustup"]
